<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@android:color/white"
              tools:context=".DateInActivity">

	<RelativeLayout
		android:id="@+id/loadingContainer"
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<TextView
			android:id="@+id/txtCalendarLoading"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:layout_marginStart="10dp"
			android:text="@string/txt_loading_calendar"/>

		<com.gc.materialdesign.views.ProgressBarCircularIndeterminate
			android:layout_width="32dp"
			android:layout_height="32dp"
			android:layout_centerInParent="true"
			android:layout_toStartOf="@id/txtCalendarLoading"
			android:background="@color/background_blue"/>

	</RelativeLayout>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:fillViewport="true"
		android:overScrollMode="never"
		android:scrollbars="none">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<TextView
				android:id="@+id/calendarHeader"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_margin="15dp"
				android:textSize="25sp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<TextView
					android:id="@+id/calendarSubHeader1"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header1"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader2"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header2"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader3"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header3"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader4"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header4"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader5"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header5"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader6"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header6"
					android:textSize="15sp"/>

				<TextView
					android:id="@+id/calendarSubHeader7"
					android:layout_width="0dp"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:gravity="center"
					android:text="@string/txt_calendar_sub_header7"
					android:textSize="15sp"/>

			</LinearLayout>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:layout_margin="5dp"
				android:background="@color/background_light_blue"/>

			<android.support.v4.view.ViewPager
				android:id="@+id/calendarViewPager"
				android:layout_width="match_parent"
				android:layout_height="360dp"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="100dp">


			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>